--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <!--</div>-->
 
         <!--<script src="http://127.0.0.1:3000/js/credit-application.js"></script>-->
-        <script src="public/form-generator.jquery.js"></script>
-
+        <script src="public/js/fg.jquery.min.js"></script>
+        <!--<script src="public/fg.jquery.min.js"></script>-->
         <script src="public/script.js"></script>
     </body>
 </html>
